# udacity

./: .gitignore  .gitmodules  LICENSE  Pipfile  README.md
data_scientist/project_1_finding_donors/: finding_donors.html  finding_donors.ipynb
data_scientist/project_2_customer_segments/: README.md  customer_segments_PT.html  customer_segments_PT.ipynb  pyproject.toml  requirements.txt
data_scientist/project_3_customer_segments/: pyproject.toml  report.html  requirements.txt
data_scientist/project_4_analyzing_subway_data/: analyzing-subway-data-ndfdsi.html  analyzing-subway-data-ndfdsi.ipynb  mapper_result.txt  pyproject.toml  reducer_result.txt  requirements.txt
datascience_i/project_i/: README.md  chicago_bikeshare_pt.py
datascience_i/project_ii/: README.md  Untitled.ipynb  project_ii.ipynb  readme.html  readme_to_pdf.md  titanic_analise.py  titanic_dataset_edit.py  titanic_edited.csv  titanic_graph_analyze.py  titanic_table_analyze.py
datascience_i/project_ii/tables/: t_1.csv  t_10.csv  t_11.csv  t_12.csv  t_13.csv  t_14.csv  t_15.csv  t_16.csv  t_17.csv  t_2.csv  t_3.csv  t_4.csv  t_5.csv  t_6.csv  t_7.csv  t_8.csv  t_9.csv
datascience_ii/module_2/: data-wrangling-template.ipynb
datascience_ii/project_i/: NFDSII - Projeto I - Apresentação.odp  ndfdsii_project_i_presentation.odp  project_i.ipynb  project_i.sql
datascience_ii/project_ii/: .gitignore  README.md  act_report.md  twitter_archive_master.csv  wrangle_act.ipynb
datascience_ii/project_iii/: Analyze_ab_test_results_notebook.html  Analyze_ab_test_results_notebook.ipynb
(+13 files in other folders)
