[tool.poetry]
name = "udacity_customer_segments"
version = "0.1.0"
description = ""
authors = ["Thiago Prado <trprado@outlook.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.16"
scikit-learn = "^0.21.2"
pandas = "^0.24.2"
matplotlib = "^3.1"
seaborn = "^0.9.0"
jupyter = "^1.0"
notebook = "^6.4"
jupyterlab = "^1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
