[tool.poetry]
name = "project_4_analyzing_subway_data"
version = "0.1.0"
description = "Quarto projeto do curso Data Scientist Udacity"
authors = ["Thiago Prado <trprado@outlook.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.17.0"
pandas = "^0.25.0"
scikit-learn = "^0.21.3"
matplotlib = "^3.1.1"
jupyter = "^1.0.0"
notebook = "^6.0.0"
jupyterlab = "^1.0.4"
requests = "^2.22.0"
beautifulsoup4 = "^4.8.0"
lxml = "^4.6.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
